--- a/notebooks/union kron gradients.ipynb
+++ b/notebooks/union kron gradients.ipynb
@@ -2,14 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import workload\n",
+    "from hdmm import workload\n",
     "\n",
     "def err(A, W):\n",
     "    AtA1 = np.linalg.pinv(A.T.dot(A))\n",
@@ -41,26 +39,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-14.54463118 -18.48842137 -17.08334543 -20.98424585 -22.70057028\n",
-      " -30.34896722 -44.01466588 -16.58639986 -22.61823456 -20.53975518\n",
-      " -41.39794428 -28.05124834 -16.44866429 -14.44347891 -16.42106535\n",
-      " -13.50129744]\n",
-      "[-14.54444588 -18.48820602 -17.08312405 -20.98397109 -22.70027383\n",
-      " -30.34856181 -44.01407365 -16.58620038 -22.61794319 -20.53949424\n",
-      " -41.39738807 -28.05087448 -16.44845689 -14.44330942 -16.42087366\n",
-      " -13.50112466]\n"
+      "[-11.01274238 -20.86668479 -17.04529003 -13.00929539 -10.60649447\n",
+      " -32.64858989 -23.29262734  -9.86175454 -38.40060603 -14.22138308\n",
+      " -35.52036922 -33.53803085 -29.81053493 -19.46231608 -15.96811841\n",
+      " -17.80842562]\n",
+      "[-11.01259884 -20.86640997 -17.0450691  -13.0091495  -10.60638053\n",
+      " -32.64815327 -23.29232371  -9.86164854 -38.40008985 -14.2212227\n",
+      " -35.51989183 -33.53758048 -29.81013569 -19.46206008 -15.96790725\n",
+      " -17.80820211]\n"
      ]
     }
    ],
    "source": [
-    "W = workload.AllRange(16).W\n",
+    "W = workload.AllRange(16)\n",
     "A = np.vstack([np.eye(16), np.random.rand(16)])\n",
     "I = np.eye(16)\n",
     "f, dA = obj([A, I], W)\n",
@@ -71,38 +69,61 @@
     "    f1, _ = obj([A,I], W)\n",
     "    approx[i] = (f1 - f) / 1e-5\n",
     "    A[i,i] -= 1e-5\n",
-    "print np.diag(dA[0])\n",
-    "print approx"
+    "print(np.diag(dA[0]))\n",
+    "print(approx)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "277.788517265\n",
+      "93.08239456914286\n",
       "(9, 8) (6, 5)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ryan/virtualenvs/pgm/lib/python3.6/site-packages/autograd/numpy/numpy_vjps.py:444: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
+      "  return lambda g: g[idxs]\n"
      ]
     }
    ],
    "source": [
     "import autograd.numpy as np\n",
     "from autograd import grad\n",
+    "from autograd.extend import defvjp\n",
+    "from functools import reduce\n",
     "\n",
-    "def pinv_vjp(g, ans, vs, gvs, A):\n",
+    "#def pinv_vjp(g, ans, vs, gvs, A):\n",
+    "#    A1 = np.linalg.pinv(A)\n",
+    "#    In = np.eye(A.shape[1])\n",
+    "#    Im = np.eye(A.shape[0])\n",
+    "#    term1 = -np.dot(A1, np.dot(g.T, A1))\n",
+    "#    term2 = np.dot(np.dot(A1, A1.T), np.dot(g, Im - np.dot(A, A1)))\n",
+    "#    term3 = np.dot(In - np.dot(A1, A), np.dot(g, np.dot(A1.T, A1)))\n",
+    "#    return (term1 + term2 + term3).T\n",
+    "\n",
+    "#np.linalg.pinv.defvjp(pinv_vjp)\n",
+    "\n",
+    "def pinv_vjp(ans, A):\n",
     "    A1 = np.linalg.pinv(A)\n",
     "    In = np.eye(A.shape[1])\n",
     "    Im = np.eye(A.shape[0])\n",
-    "    term1 = -np.dot(A1, np.dot(g.T, A1))\n",
-    "    term2 = np.dot(np.dot(A1, A1.T), np.dot(g, Im - np.dot(A, A1)))\n",
-    "    term3 = np.dot(In - np.dot(A1, A), np.dot(g, np.dot(A1.T, A1)))\n",
-    "    return (term1 + term2 + term3).T\n",
+    "    def foo(g):\n",
+    "        term1 = -np.dot(A1, np.dot(g.T, A1))\n",
+    "        term2 = np.dot(np.dot(A1, A1.T), np.dot(g, Im - np.dot(A, A1)))\n",
+    "        term3 = np.dot(In - np.dot(A1, A), np.dot(g, np.dot(A1.T, A1)))\n",
+    "        return (term1 + term2 + term3).T\n",
+    "    return foo\n",
     "\n",
-    "np.linalg.pinv.defvjp(pinv_vjp)\n",
+    "defvjp(np.linalg.pinv, pinv_vjp)\n",
     "\n",
     "def kron_obj(As, Ws):\n",
     "    # As is a l x d table\n",
@@ -130,7 +151,7 @@
     "                # check to make sure strategy supports workload\n",
     "                v[d] = np.sum(X**2, axis=1)[:,None]\n",
     "                if not np.allclose(np.dot(X, A), Ws[k][d]):\n",
-    "                    print 'checkpt'\n",
+    "                    print('checkpt')\n",
     "            V[l][k] = reduce(np.kron, v).flatten()\n",
     "            \n",
     "    V2 = np.array([np.concatenate(vs) for vs in V]) / eps[:,None]**2\n",
@@ -148,111 +169,32 @@
     "Ws = [[W1, W2]]\n",
     "eps = np.ones(2)\n",
     "\n",
-    "print kron_obj(As, Ws)\n",
+    "print(kron_obj(As, Ws))\n",
     "dA = grad(kron_obj)(As, Ws)\n",
     "\n",
-    "print dA[0][0].shape, dA[0][1].shape\n",
-    "\n",
-    "    "
+    "print(dA[0][0].shape, dA[0][1].shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.122390314811\n",
-      "0.216194720791\n",
-      "0.307232642807\n",
-      "0.519059160643\n",
-      "0.735007897108\n",
-      "1.11188542348\n",
-      "1.63235197036\n",
-      "1.91284331855\n",
-      "2.24676608232\n",
-      "3.22833712618\n",
-      "4.50557554573\n",
-      "5.56471812278\n",
-      "6.60729500881\n",
-      "8.34521155237\n",
-      "3.62872670146\n",
-      "8.57274087006\n",
-      "8.92953591429\n",
-      "9.15142632231\n",
-      "8.90476337347\n",
-      "9.44856720228\n",
-      "10.5492207042\n",
-      "1.21882914238\n",
-      "10.6713994671\n",
-      "4.51310494846\n",
-      "10.6804068464\n",
-      "10.1404306571\n",
-      "10.8558510115\n",
-      "3.7143251945\n",
-      "10.8570058065\n",
-      "8.52560679802\n",
-      "10.872604219\n",
-      "9.35123952683\n",
-      "11.1681942779\n",
-      "4.64673324838\n",
-      "11.1707092687\n",
-      "11.1708077616\n",
-      "11.2711602599\n",
-      "4.53378475571\n",
-      "11.3910888752\n",
-      "4.82537696943\n",
-      "11.3929083005\n",
-      "11.2918720605\n",
-      "11.4872162339\n",
-      "6.14091959541\n",
-      "11.5673170911\n",
-      "11.8279253325\n",
-      "12.1655782389\n",
-      "11.8662519132\n",
-      "12.2331675814\n",
-      "7.75604414641\n",
-      "12.2973496096\n",
-      "12.2802799238\n",
-      "12.0973151465\n",
-      "12.3443855257\n",
-      "12.1421307903\n",
-      "12.4489388646\n",
-      "1.74345147371\n",
-      "12.3910427562\n",
-      "12.451439646\n",
-      "8.11959105613\n",
-      "11.8893571364\n",
-      "12.443001376\n",
-      "12.4515673896\n",
-      "12.458512403\n",
-      "12.4696741977\n",
-      "12.4934692541\n",
-      "9.97090919336\n",
-      "12.5010196104\n",
-      "8.85646487732\n",
-      "12.502162793\n",
-      "12.5057192966\n",
-      "12.5171865951\n",
-      "12.5229471745\n",
-      "12.5255501835\n",
-      "11.8842836428\n",
-      "12.5258203081\n",
-      "11.6982119582\n",
-      "12.5258222981\n",
-      "11.7715706285\n",
-      "12.525823638\n",
-      "11.8189782371\n",
-      "12.5258236403\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'experiments.census_workloads'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-17-d823bc762019>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mscipy\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0moptimize\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mhdmm\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mworkload\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mexperiments\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcensus_workloads\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mCensusSF1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mscipy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0moptimize\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mminimize\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'experiments.census_workloads'"
      ]
     }
    ],
    "source": [
     "from scipy import optimize\n",
-    "import workload\n",
+    "from hdmm import workload\n",
     "from experiments.census_workloads import CensusSF1\n",
     "from scipy.optimize import minimize\n",
     "\n",
@@ -294,7 +236,7 @@
     "    dAs = gradient1(As, Ws)\n",
     "    #deps = gradient2(As, eps, Ws)\n",
     "    dparams = mats_to_vect(dAs)\n",
-    "    print id_err / ans\n",
+    "    print(id_err / ans)\n",
     "    #print ans, params.sum(), np.sum([[np.sum(A) for A in Ai] for Ai in As])\n",
     "    return ans, dparams\n",
     "\n",
@@ -389,21 +331,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
