OPT0 with torch

--- a/notebooks/torch.ipynb
+++ b/notebooks/torch.ipynb
@@ -2,75 +2,65 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import torch\n",
     "from hdmm.templates import TemplateStrategy\n",
-    "from hdmm import workload"
+    "from hdmm import workload, matrix\n",
+    "import time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor(0.)"
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mask = torch.tril(torch.ones(5,5, dtype=torch.uint8), diagonal=-1)\n",
-    "B = torch.zeros(5,5)\n",
-    "z = torch.rand(10)\n",
-    "B[mask] = z\n",
-    "#print(B)\n",
-    "B = B + torch.t(B)\n",
-    "#torch.diag(torch.tensor(0.5), diagonal=0, out=B)\n",
-    "torch.diag(B).max()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "class McKennaConvex(TemplateStrategy):\n",
+    "    \"\"\"\n",
+    "    A highly optimized GPU implementation of OPT_0.  \n",
+    "    Requires memory for 6*n^2 4 byte floats\n",
+    "    \n",
+    "    For n = 2^14 = 16384, requires ~25 seconds per iteration\n",
+    "    \"\"\"\n",
     "    def __init__(self, n):\n",
     "        self.n = n\n",
-    "        self._mask = torch.tril(torch.ones(n,n, dtype=torch.uint8), diagonal=-1)\n",
-    "        self._params = torch.zeros(n*(n-1)//2)\n",
-    "        self.X = torch.zeros(n,n)\n",
+    "        #self._mask = torch.tril(torch.ones(n,n, dtype=torch.uint8, device=\"cuda\"), diagonal=-1)\n",
+    "        #self._params = torch.zeros(n*(n-1)//2, device=\"cuda\")\n",
+    "        #self.X = torch.eye(n,n, device=\"cuda\")\n",
+    "        self.iX = torch.empty(n,n,device=\"cuda\")\n",
+    "        self.tmp = torch.empty(n,n,device=\"cuda\")\n",
+    "        self.grad = torch.empty(n,n,device=\"cuda\")\n",
+    "        \n",
+    "    def strategy(self):\n",
+    "        torch.cholesky(self.X, out=self.tmp)\n",
+    "        A = self.tmp.to(\"cpu\").numpy()\n",
+    "        return matrix.EkteloMatrix(A.T)\n",
     "\n",
     "    def _set_workload(self, W):\n",
-    "        self.V = torch.tensor(W.gram().dense_matrix().astype(np.float32))\n",
+    "        self.V = torch.tensor(W.gram().dense_matrix()).to(\"cuda\")\n",
     "        self.W = W\n",
-    "\n",
-    "    def _loss(self):\n",
-    "        V = self.V\n",
-    "        X = 0.5*torch.eye(self.n, out=self.X)\n",
     "        \n",
-    "        X[self._mask] = self._params\n",
-    "        X = X + torch.t(X) # warning: don't do this in place\n",
-    "\n",
+    "    def _loss(self, X):\n",
     "        try:\n",
-    "            zz = torch.cholesky(X)\n",
-    "            #iX = torch.cholesky_inverse(zz)\n",
-    "            iX = torch.inverse(X)\n",
+    "            torch.cholesky(X, out=self.tmp)\n",
+    "            torch.cholesky_inverse(self.tmp, out=self.iX)\n",
+    "            #self.iX = torch.inverse(X, out=self.iX)\n",
     "        except:\n",
-    "            return torch.tensor(np.inf)\n",
+    "            return torch.tensor(np.inf, device=\"cuda\")\n",
     "      \n",
-    "        return torch.sum(iX * V) \n",
+    "        return torch.dot(self.iX.flatten(), self.V.flatten())\n",
+    "\n",
+    "    def _ngrad(self):\n",
+    "        # negative gradient, should be called immediately after _loss\n",
+    "        self.tmp = torch.mm(self.iX, self.V, out=self.tmp)\n",
+    "        self.grad = torch.mm(self.tmp, self.iX, out=self.grad)\n",
+    "        #G = -self.iX @ self.V @ self.iX\n",
+    "        torch.zeros(self.n, out=self.grad.diagonal())\n",
+    "        return self.grad\n",
     "\n",
     "    def optimize(self, W, iters=5000):\n",
     "        self._set_workload(W)\n",
@@ -79,134 +69,88 @@
     "        eig[eig < 1e-10] = 0.0\n",
     "        X = P @ torch.diag(torch.sqrt(eig)) @ torch.t(P)\n",
     "        X /= torch.diag(X).max()\n",
-    "        \n",
-    "        self._params = X[self._mask].requires_grad_(True)\n",
+    "        torch.ones(self.n, out=X.diagonal())\n",
+    "\n",
+    "        Y = torch.empty(self.n, self.n, device=\"cuda\")\n",
     "        \n",
     "        # have to implement the optimization loop manually :(\n",
     "        \n",
-    "        beta = 1.0\n",
-    "        for it in range(500):\n",
-    "            self._params.detach_().requires_grad_(True)\n",
-    "            curr_loss = self._loss()\n",
-    "            curr_loss.backward()\n",
-    "            params = self._params\n",
+    "        loss= self._loss(X)\n",
+    "        \n",
+    "        beta = 0.25\n",
+    "        for it in range(250):\n",
+    "            beta *= 4.0\n",
+    "            t0 = time.time()\n",
+    "            curr_loss = loss\n",
+    "            ngrad = self._ngrad().mul_(beta)\n",
+    "            m = ngrad.norm()\n",
+    "            t1 = time.time()\n",
+    "            Y.copy_(X)\n",
     "            for i in range(0, 25):\n",
-    "                self._params = params - beta * params.grad.data\n",
-    "                loss = self._loss()\n",
-    "                if loss < curr_loss:\n",
+    "                torch.add(Y, ngrad, out=X)\n",
+    "                loss = self._loss(X)\n",
+    "                if curr_loss - loss >= 0.5*beta*m:\n",
     "                    break\n",
     "                beta *= 0.5\n",
-    "            if it % 100 == 0:\n",
-    "                print(beta,torch.sqrt(loss/self.W.shape[0]))\n",
+    "                ngrad.mul_(0.5)\n",
+    "            t2 = time.time()\n",
+    "            if it % 1 == 0:\n",
+    "                print('%d, %.2f, %.2f, %.6f, %.4f' % (it, t1-t0, t2-t1, beta,torch.sqrt(loss/self.W.shape[0])))\n",
     "            \n",
-    "            #print(loss)\n",
+    "        self.X = X\n",
+    "            \n",
+    "        return loss\n",
     "              "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.015625 tensor(3.0193, grad_fn=<SqrtBackward>)\n",
-      "0.0009765625 tensor(2.8757, grad_fn=<SqrtBackward>)\n",
-      "0.0009765625 tensor(2.8355, grad_fn=<SqrtBackward>)\n",
-      "0.0009765625 tensor(2.8132, grad_fn=<SqrtBackward>)\n",
-      "0.0009765625 tensor(2.7986, grad_fn=<SqrtBackward>)\n"
+      "0, 0.00, 24.75, 0.015625, 4.4598\n",
+      "1, 0.00, 25.52, 0.000122, 4.4593\n",
+      "2, 0.00, 23.69, 0.000488, 4.4574\n",
+      "3, 0.00, 23.82, 0.001953, 4.4502\n",
+      "4, 0.00, 24.05, 0.001953, 4.4433\n",
+      "5, 0.00, 24.21, 0.001953, 4.4367\n",
+      "6, 0.00, 23.98, 0.003906, 4.4242\n",
+      "7, 0.00, 23.88, 0.007812, 4.4016\n",
+      "8, 0.00, 25.13, 0.000122, 4.4010\n",
+      "9, 0.00, 23.87, 0.000488, 4.3998\n"
      ]
     }
    ],
    "source": [
-    "n = 512\n",
-    "W = workload.Prefix(n)\n",
+    "n = 2**14\n",
+    "W = workload.Prefix(n, dtype=np.float32)\n",
     "#W = workload.AllRange(n)\n",
     "temp = McKennaConvex(n)\n",
-    "temp.optimize(W)"
+    "temp.optimize(W)\n",
+    "\n",
+    "A = temp.strategy().dense_matrix()\n",
+    "np.save('prefix-%d.npy' % n, A)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2.0682157488120567e-10\n",
-      "6390.995693388852\n"
-     ]
-    }
-   ],
-   "source": [
-    "R = workload.Prefix(64)\n",
-    "I = workload.Identity(64)\n",
-    "T = workload.Total(64)\n",
-    "\n",
-    "W = workload.VStack([workload.Kronecker([R,T]), workload.Kronecker([T,R])])\n",
-    "A = workload.Kronecker([I,T])\n",
-    "\n",
-    "WtW = W.gram()\n",
-    "A = workload.Marginals((64,64), np.array([0,0,1,0]))\n",
-    "AtA = A.gram()\n",
-    "AtA1 = AtA.pinv()\n",
-    "\n",
-    "z = np.random.rand(WtW.shape[0])\n",
-    "for X, Y in zip(WtW.matrices, (WtW @ AtA1 @ AtA).matrices):\n",
-    "    err = np.linalg.norm(X.dot(z) - Y.dot(z))\n",
-    "    print(err)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3477.499999999999"
-      ]
-     },
-     "execution_count": 267,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from hdmm import error\n",
-    "error.expected_error(W, A)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 261,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[64., 64., 64., ...,  1.,  1.,  1.],\n",
-       "       [64., 64., 64., ...,  1.,  1.,  1.],\n",
-       "       [64., 64., 64., ...,  1.,  1.,  1.],\n",
-       "       ...,\n",
-       "       [ 1.,  1.,  1., ...,  1.,  1.,  1.],\n",
-       "       [ 1.,  1.,  1., ...,  1.,  1.,  1.],\n",
-       "       [ 1.,  1.,  1., ...,  1.,  1.,  1.]])"
-      ]
-     },
-     "execution_count": 261,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "WtW "
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -232,7 +176,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
